<resources>
    <string name="app_name">Jalanesia</string>
    <string name="top_icon">TOP ICON</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="otp">OTP Code</string>
    <string name="resend_otp">Resend OTP Code</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="send">SEND</string>
    <string name="confirm">CONFIRM</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="user_register">Your amazing journey starts here!</string>
    <string name="user_login">Enter your registered phone number or email to login</string>
    <string name="new_user_register_now">Doesn\'t have an account?</string>
    <string name="already_have_an_account">Already have an Account? </string>
    <string name="tos">By logging or registering, I agree to our Term Of Service and Privacy Policy.</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="faq">FAQ</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="change_password">Change Password</string>
    <string name="myPhone">+6285811144669</string>
    <string name="myName">Moh Reza Luthfiansyah</string>
    <string name="photoProfile">photo profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="_18">18</string>
    <string name="_125">125</string>
    <string name="browse">Browse</string>
    <string name="more">more</string>
</resources>
