<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".MainActivity">

<!--    <RelativeLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content">-->

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:fontFamily="@font/open_sans_regular"-->
<!--            android:text="Personal"-->
<!--            android:textColor="#000000"-->
<!--            android:textSize="24dp"></TextView>-->

<!--        <ImageView-->
<!--            android:layout_width="18dp"-->
<!--            android:layout_height="18dp"-->
<!--            android:layout_alignParentRight="true"-->
<!--            android:layout_centerVertical="true"-->
<!--            android:src="@drawable/menu">-->

<!--        </ImageView>-->
<!--    </RelativeLayout>-->

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/bg">

        <ImageView
            android:id="@+id/profile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="18dp"
            android:src="@drawable/profile"
            android:contentDescription="@string/photoProfile" />

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="18dp"
            android:layout_toEndOf="@+id/profile"
            android:fontFamily="@font/open_sans_regular"
            android:text="@string/myName"
            android:textColor="#ffff"
            android:textSize="22sp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username"
            android:layout_centerVertical="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/profile"
            android:fontFamily="@font/open_sans_regular"
            android:text="@string/myPhone"
            android:textColor="#ffff"
            android:textSize="16sp" />


        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="12dp"
            android:src="@drawable/ic_edit"
            android:contentDescription="@string/edit_profile" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        android:weightSum="3"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_18"
                android:textColor="#313131"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/following"
                android:textColor="#919191"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_125"
                android:textColor="#313131"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/follower"
                android:textColor="#919191"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/_18"
                android:textColor="#313131"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/browse"
                android:textColor="#919191"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

<!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="36dp"-->
<!--        android:fontFamily="@font/open_sans_regular"-->
<!--        android:text="Situation"-->
<!--        android:textColor="#000000"-->
<!--        android:textSize="24dp"></TextView>-->

    <ScrollView
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

<!--            <LinearLayout-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:orientation="horizontal"-->
<!--                android:padding="12dp"-->
<!--                android:weightSum="2"-->
<!--                android:baselineAligned="false">-->

<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="80dp"-->
<!--                    android:layout_weight="1"-->
<!--                    android:background="@drawable/bg"-->
<!--                    android:padding="18dp">-->

<!--                    <ImageView-->
<!--                        android:layout_width="25dp"-->
<!--                        android:layout_height="25dp"-->
<!--                        android:layout_gravity="center"-->
<!--                        android:src="@drawable/output">-->

<!--                    </ImageView>-->

<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_gravity="center"-->
<!--                        android:layout_marginStart="12dp"-->
<!--                        android:fontFamily="@font/open_sans_regular"-->
<!--                        android:text="2186.25"-->
<!--                        android:textColor="#FFFFFF"-->
<!--                        android:textSize="20sp" />-->
<!--                </LinearLayout>-->

<!--                <LinearLayout-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="80dp"-->
<!--                    android:layout_weight="1"-->
<!--                    android:padding="18dp">-->

<!--                    <ImageView-->
<!--                        android:layout_width="25dp"-->
<!--                        android:layout_height="25dp"-->
<!--                        android:layout_gravity="center"-->
<!--                        android:src="@drawable/input">-->

<!--                    </ImageView>-->

<!--                    <TextView-->
<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_gravity="center"-->
<!--                        android:layout_marginStart="12dp"-->
<!--                        android:fontFamily="@font/open_sans_regular"-->
<!--                        android:text="1200.26"-->
<!--                        android:textColor="#575757"-->
<!--                        android:textSize="20sp" />-->
<!--                </LinearLayout>-->
<!--            </LinearLayout>-->


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp">

                <ImageView
                    android:id="@+id/icon_password"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_password"
                    android:contentDescription="TODO">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@id/icon_password"
                    android:text="@string/change_password"
                    android:textColor="#8A8C8D"
                    android:textSize="20sp"
                    android:fontFamily="@font/open_sans_regular"
                    tools:ignore="RelativeOverlap" />

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_next"
                    android:contentDescription="TODO">

                </ImageView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp">

                <ImageView
                    android:id="@+id/icon_ar"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_question">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@id/icon_ar"
                    android:text="@string/faq"
                    android:textColor="#8A8C8D"
                    android:textSize="20sp"
                    android:fontFamily="@font/open_sans_regular"
                    tools:ignore="RelativeOverlap" />

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_next">

                </ImageView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp">

                <ImageView
                    android:id="@+id/icon_set"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_gear">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@id/icon_set"
                    android:text="@string/settings"
                    android:textColor="#8A8C8D"
                    android:textSize="20sp"
                    android:fontFamily="@font/open_sans_regular"/>

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_next">

                </ImageView>
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/btn_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="34dp">

                <ImageView
                    android:id="@+id/icon_ser"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_logout"
                    android:contentDescription="TODO">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="16dp"
                    android:layout_toEndOf="@id/icon_ser"
                    android:text="@string/logout"
                    android:textColor="#8A8C8D"
                    android:textSize="20sp"
                    tools:ignore="RelativeOverlap"
                    android:fontFamily="@font/open_sans_regular" />

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_next"
                    android:contentDescription="TODO">

                </ImageView>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>